# MOSQ_ICCD

./: .gitignore  manual.txt
MOSQ_working/cache/: B2.json  B2_fermionic_op.txt  BH3.json  BH3_fermionic_op.txt  BN.json  BN_fermionic_op.txt  Be2.json  Be2_fermionic_op.txt  BeC.json  BeC_fermionic_op.txt  BeH2.json  BeH2_fermionic_op.txt  BrH.json  C2.json  C2H2.json  C2H2_fermionic_op.txt  C2H4.json  C2H4_fermionic_op.txt  C2H6.json  C2H6_fermionic_op.txt  C2_fermionic_op.txt  CH2.json  CH2_fermionic_op.txt  CH3N.json  CH3N_fermionic_op.txt  CH4.json  CH4_fermionic_op.txt  CO.json  CO2.json  CO2_fermionic_op.txt  CO_fermionic_op.txt  H2.json  H2CS.json  H2CS_fermionic_op.txt  H2O.json  H2O2.json  H2O2_fermionic_op.txt  H2O_fermionic_op.txt  H2_fermionic_op.txt  H3COH.json  (+31 more)
MOSQ_working/code/: Baseline.py  Fusion.py  MOSQ.py  python_code.py
MOSQ_working/script/: MOSQ_script.sh
qiskit-aer/: CMakeLists.txt
qiskit-aer/_skbuild/linux-x86_64-3.8/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  install_manifest.txt
qiskit-aer/_skbuild/linux-x86_64-3.8/cmake-build/qiskit_aer/backends/wrappers/: CTestTestfile.cmake  cmake_install.cmake
qiskit-aer/_skbuild/linux-x86_64-3.8/setuptools/lib/qiskit_aer/backends/: aer_compiler.py
qiskit-aer/_skbuild/linux-x86_64-3.8/setuptools/lib/qiskit_aer/primitives/: estimator_v2.py
qiskit-aer/contrib/standalone/: version.hpp
qiskit-aer/qiskit_aer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qiskit-aer/src/controllers/: controller_execute.hpp
qiskit-aer/src/framework/: circuit.hpp  operations.hpp
qiskit-aer/src/simulators/: circuit_executor.hpp  state.hpp
qiskit-aer/src/simulators/statevector/: indexes.hpp  statevector_executor.hpp  statevector_state.hpp  transformer.hpp  transformer_avx2.hpp
src_code_MOSQ/: _cobyla_py.py  aer_compiler.py  estimator_v2.py  estimator_v2_MOSQ_CR.py  fusion_OFF.hpp  qubitvector.hpp
